# CoSim

./: .gitignore  README.md
gemmini-rocc-tests/: .gitignore
gemmini-rocc-tests/bert_base/: Makefile  README.md  bert_base_matmul_common.h  matmul_attn_av_head0_matmul.c  matmul_attn_av_head10_matmul.c  matmul_attn_av_head11_matmul.c  matmul_attn_av_head1_matmul.c  matmul_attn_av_head2_matmul.c  matmul_attn_av_head3_matmul.c  matmul_attn_av_head4_matmul.c  matmul_attn_av_head5_matmul.c  matmul_attn_av_head6_matmul.c  matmul_attn_av_head7_matmul.c  matmul_attn_av_head8_matmul.c  matmul_attn_av_head9_matmul.c  matmul_attn_qk_head0_matmul.c  matmul_attn_qk_head10_matmul.c  matmul_attn_qk_head11_matmul.c  matmul_attn_qk_head1_matmul.c  matmul_attn_qk_head2_matmul.c  matmul_attn_qk_head3_matmul.c  matmul_attn_qk_head4_matmul.c  matmul_attn_qk_head5_matmul.c  matmul_attn_qk_head6_matmul.c  matmul_attn_qk_head7_matmul.c  matmul_attn_qk_head8_matmul.c  matmul_attn_qk_head9_matmul.c  matmul_ff1_matmul.c  matmul_ff2_matmul.c  matmul_out_wo_matmul.c  matmul_qkv_i0_matmul.c  matmul_qkv_i1_matmul.c  matmul_qkv_i2_matmul.c  run_bert_base_sims.sh
gemmini-rocc-tests/bert_large/: Makefile  bert_large_matmul_common.h  matmul_attn_av_head0_matmul.c  matmul_attn_av_head10_matmul.c  matmul_attn_av_head11_matmul.c  matmul_attn_av_head12_matmul.c  matmul_attn_av_head13_matmul.c  matmul_attn_av_head14_matmul.c  matmul_attn_av_head15_matmul.c  matmul_attn_av_head1_matmul.c  matmul_attn_av_head2_matmul.c  matmul_attn_av_head3_matmul.c  matmul_attn_av_head4_matmul.c  matmul_attn_av_head5_matmul.c  matmul_attn_av_head6_matmul.c  matmul_attn_av_head7_matmul.c  matmul_attn_av_head8_matmul.c  matmul_attn_av_head9_matmul.c  matmul_attn_qk_head0_matmul.c  matmul_attn_qk_head10_matmul.c  matmul_attn_qk_head11_matmul.c  matmul_attn_qk_head12_matmul.c  (+19 more)
gemmini_interface/: .gitignore  CMakeLists.txt  gen_ir.sh  mlir_gemmini_runtime.cpp
gemmini_interface/include/: gemmini.h  gemmini_params.h  gemmini_testutils.h
llvm/: .gitignore  CMakeLists.txt  bb_num.py  inliner.cpp  instrumentPass.cpp  log_helper.cpp  process_profile.py  profile.cpp  profile_helper.cpp  rename_pass.cpp  split_bb.cpp
manual/: CMakeLists.txt  Makefile  interface.c  interface.h  test.c
mlir/: CMakeLists.txt
mlir/lib/: CMakeLists.txt
mlir/lib/gemmini_conv/: CMakeLists.txt  GemminiConvPass.cpp  GemminiConvPass.h
mlir/lib/gemmini_matmul/: CMakeLists.txt  GemminiMatmulPass.cpp  GemminiMatmulPass.h
mlir/tools/: CMakeLists.txt  customize.cpp
pytorch/: .gitignore  clean.sh  compile.sh  compile_simpoint.sh  convert.sh  resnet.py  run.sh
sim/: .gitignore  CMakeLists.txt  DDR3_micron_16M_8B_x8_sg3.txt  boom.yml  boom_ws.yml  gem5_ooo2.yml  gem5_ooo4.yml  gem5_ooo6.yml
sim/include/: alloc_queue.h  branch_predictor.h  core.h  function_unit.h  hardware.h  ifu.h  intmath.h  issue_unit.h  lsu.h  params.h  port.h  power_area_model.h  statistic.h  utils.h  window.h
sim/include/SA/: AccumulationBuffer.h  Accumulator.h  CollectionBusLine.h  Command.h  CompilerComponent.h  CompilerMultiplierMesh.h  Config.h  Fifo.h  MemoryController.h  MultiplierNetwork.h  MultiplierOS.h  MultiplierWS.h  OSMeshMN.h  OSMeshSDMemory.h  ReduceNetwork.h  Region.h  SAController.h  STONNEModel.h  TemporalRN.h  WSAccumulationBuffer.h  WSMeshMN.h  WSMeshSDMemory.h  testbench.h  types.h  utility.h
sim/include/mem/: Callback.hpp  DMAEngine.h  DRAM.hpp  DRAMSim.hpp  FunctionalCache.hpp  SimpleDRAM.hpp  cache.h  mem_transaction.h
sim/include/tage/: saturating_predictor.h  tage.h  tage_base_predictor.h  tage_branch_predictor.h
sim/include/task/: basic_block.h  dyn_insn.h  function.h  instruction.h  llvm.h  task.h  value.h
sim/src/: alloc_queue.cpp  branch_predictor.cpp  core.cpp  hardware.cpp  ifu.cpp  issue_unit.cpp  lsu.cpp  main.cpp  main_stonne.cpp  power_area_model.cpp  statistc.cpp  utils.cpp  window.cpp
sim/src/SA/: ASNetwork.cpp  ASwitch.cpp  AccumulationBuffer.cpp  Accumulator.cpp  CollectionBus.cpp  CollectionBusLine.cpp  Command.cpp  CompilerART.cpp  CompilerFEN.cpp  CompilerMSN.cpp  CompilerMultiplierMesh.cpp  Config.cpp  Connection.cpp  DNNLayer.cpp  DSNetwork.cpp  DSNetworkTop.cpp  DSwitch.cpp  DataPackage.cpp  FEASwitch.cpp  FENetwork.cpp  Fifo.cpp  LookupTable.cpp  MSNetwork.cpp  MSwitch.cpp  MultiplierOS.cpp  MultiplierWS.cpp  OSMeshMN.cpp  OSMeshSDMemory.cpp  Region.cpp  SAController.cpp  SDMemory.cpp  STONNEModel.cpp  Stats.cpp  TemporalRN.cpp  Tile.cpp  WSAccumulationBuffer.cpp  WSMeshMN.cpp  WSMeshSDMemory.cpp  testbench.cpp  utility.cpp
sim/src/mem/: DMAEngine.cpp  DRAM.cpp  FunctionalCache.cpp  SimpleDRAM.cpp  cache.cpp  mem_transaction.cpp
sim/src/tage/: tage.cpp  tage_branch_predictor.cpp
sim/src/task/: basicblock.cpp  dyn_insn.cpp  function.cpp  instruction.cpp  task.cpp
(+153 files in other folders)
